methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:1: error: Missing closing brace `}' assumed here
def haveBaggle():Boolean = {var p:Int = 1
^MethodsReturning:1: error: expected class or object definition
def haveBaggle():Boolean = {var p:Int = 1
^MethodsReturning:4: error: expected class or object definition
p=1;
^MethodsReturning:5: error: expected class or object definition
while (haveBaggle()) {if (haveBaggle()) {return} else {droite();avance();gauche();p=p+1}
^